--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://felixlinker.de/cyber-trust-homepage/'
 languageCode = 'en-us'
 title = 'Centre for Cyber Trust'
 
