--- a/config.toml
+++ b/config.toml
@@ -12,25 +12,25 @@ style = "pills"
 [[languages.en.menu.main]]
 identifier = "home"
 name = "Home"
-url = "/"
+url = "/homepage"
 weight = 10
 
 [[languages.en.menu.main]]
 identifier = "team"
 name = "Team"
-url = "/team"
+url = "/homepage/team"
 weight = 20
 
 [[languages.en.menu.main]]
 identifier = "projects"
 name = "Projects"
-url = "/projects"
+url = "/homepage/projects"
 weight = 30
 
 [[languages.en.menu.main]]
 identifier = "pubs"
 name = "Publications"
-url = "/publications"
+url = "/homepage/publications"
 weight = 40
 
 [[module.imports]]
