--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "scripts": {
+    "postinstall": "hugo-installer --version otherDependencies.hugo --extended"
+  },
   "dependencies": {
     "sass-embedded": "1.62.0"
+  },
+  "devDependencies": {
+    "hugo-installer": "^4.0.1"
+  },
+  "otherDependencies": {
+    "hugo": "0.121.2"
   }
 }
