--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://centre-for-cyber-trust.github.io/homepage/'
+baseURL = 'https://centre-for-cyber-trust.github.io/'
 languageCode = 'en-us'
 title = 'Centre for Cyber Trust'
 
